# maxflowstudio

./: CALUDE.local.md  test_websocket.py
backend/: .env.example  fix_deployed_at.py  pyproject.toml  requirements.txt  test_full_system.py  test_integration.py  test_new_components.py  test_simple.py  test_workspace_api.py  verify_db.py
backend/alembic/: env.py
backend/alembic/versions/: 002_add_workspace_models.py  2b314362f4e3_add_unified_environment_variables_table.py  4288b7e284a5_initial_migration.py  6f7cb4de1879_add_workspace_permission_mapping_system.py  a1a1110bfd40_fix_flow_versions_table_name_and_add_.py  add_rag_tables.py  create_flow_templates_table.py  e8507d3b0332_convert_enum_columns_to_varchar.py  e95dde9bde79_merge_flow_templates_and_other_.py
backend/scripts/: start_worker.py
backend/src/: main.py
backend/src/api/: admin.py  api_keys.py  auth.py  deployed.py  deployments.py  environment_variables.py  executions.py  flow_templates.py  flow_versions.py  flows.py  health.py  nodes.py  rag.py  system.py  test_execution.py  websocket_handlers.py  workspaces.py
backend/src/config/: rag_config.py  settings.py
backend/src/core/: auth.py  component_base.py  component_discovery.py  component_registry.py  component_registry_new.py  component_template.py  database.py  exceptions.py  graph_execution_state.py  graph_executor.py  graph_executor_backup.py  graph_scheduler.py  interactive_workflow_engine.py  logging.py  message_queue.py  queued_workflow_engine.py  workflow_engine.py
backend/src/middleware/: auth.py  logging.py  rbac.py
backend/src/models/: __init__.py  api_deployment.py  api_key.py  environment_variable.py  execution.py  flow.py  flow_template.py  flow_workspace_map.py  group.py  node_type.py  rag_collection.py  rag_document.py  rag_search_history.py  user.py  workspace.py  workspace_mapping.py  workspace_permission.py
backend/src/new_components/: __init__.py
backend/src/schemas/: flow_template.py  rag.py
(+145 files in other folders)
